--- a/RecipesProject/Views/Home/Index.cshtml
+++ b/RecipesProject/Views/Home/Index.cshtml
@@ -1,8 +1,16 @@
-﻿@{
+﻿@*@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    @* <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p> 
+</div>*@
+
+@{
+    ViewData["Title"] = "Home Page";
+}
+
+<h1>Welcome to Recipes Project</h1>
+
+<a asp-controller="Recipe" asp-action="Generate" class="btn btn-primary">Generate Recipe</a>
