nav bar,news page, saved recipes

--- a/RecipesProject/Areas/Identity/Pages/Account/Register.cshtml
+++ b/RecipesProject/Areas/Identity/Pages/Account/Register.cshtml
@@ -59,6 +59,7 @@
                 }
             }
         </section>
+        <p>Already have an account? <a href="~/Identity/Account/Login">Login here</a>.</p>
     </div>
 </div>
 
