--- a/RecipesProject/Views/Generate/Generate.cshtml
+++ b/RecipesProject/Views/Generate/Generate.cshtml
@@ -4,7 +4,7 @@
 
 <h1>Generate Recipe</h1>
 
-<form asp-controller="Recipe" asp-action="Generate" method="post">
+<form asp-controller="Generate" asp-action="Generate" method="post">
     <div class="form-group">
         <label for="ingredient1">Ingredient 1:</label>
         <input type="text" class="form-control" id="ingredient1" name="ingredient1">
