--- a/RecipesProject/Views/Shared/_Layout.cshtml
+++ b/RecipesProject/Views/Shared/_Layout.cshtml
@@ -12,25 +12,33 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">RecipesProject</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <!-- Menu Items -->
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Menu
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Pantry">Pantry</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Generate" asp-action="Generate">Generate Recipe</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Video" asp-action="Index">News</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="List" asp-action="Index">Shopping List</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Recicle" asp-action="Index">Recicle Map</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Recipe" asp-action="Index">Saved Recipes</a>
+                            </div>
                         </li>
                     </ul>
-                    <partial name="_LoginPartial" />
                 </div>
+
+                <partial name="_LoginPartial" />
             </div>
         </nav>
     </header>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
