--- a/RecipesProject/Views/Home/Index.cshtml
+++ b/RecipesProject/Views/Home/Index.cshtml
@@ -13,4 +13,4 @@
 
 <h1>Welcome to Recipes Project</h1>
 
-<a asp-controller="Recipe" asp-action="Generate" class="btn btn-primary">Generate Recipe</a>
+<a asp-controller="Generate" asp-action="Generate" class="btn btn-primary">Generate Recipe</a>
