--- a/RecipesProject/Views/Recipe/Index.cshtml
+++ b/RecipesProject/Views/Recipe/Index.cshtml
@@ -11,7 +11,7 @@
     <ul>
         @foreach (var recipe in Model)
         {
-            <li>@recipe.Description</li>
+            <pre>@recipe.Description</pre>
         }
     </ul>
 }
