--- a/RecipesProject/Views/Shared/_Layout.cshtml
+++ b/RecipesProject/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                                 <a class="dropdown-item" asp-area="" asp-controller="List" asp-action="Index">Shopping List</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Recicle" asp-action="Index">Recicle Map</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Recipe" asp-action="Index">Saved Recipes</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="Index">All users</a>
                             </div>
                         </li>
                     </ul>
